Fixed header spacing

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -12,7 +12,7 @@ body p {
 }
 
 nav {
-  padding-top: 2.5rem;
+  margin-top: 2.5rem;
   text-align: center;
   height: 150px;
 }
